--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,19 +6,6 @@ media_folder: static/img
 public_folder: /img
 
 collections:
-  - name: "blog"
-    label: "Blog"
-    folder: "src/pages/blog"
-    create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
-    fields:
-      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "blog-post"}
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Description", name: "description", widget: "text"}
-      - {label: "Body", name: "body", widget: "markdown"}
-      - {label: "Tags", name: "tags", widget: "list"}
-
   - name: "pages"
     label: "Pages"
     files:
@@ -27,8 +14,28 @@ collections:
         name: "about"
         fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "about-page"}
-          - {label: "Title", name: "title", widget: "string"}
-          - {label: "Body", name: "body", widget: "markdown"}
+          - {label: Title, name: title, widget: string}
+          - {label: Heading, name: heading, widget: string}
+          - {label: Bios, name: bios, widget: object, fields: [
+              {label: Bio1, name: bio1, widget: object, fields: [
+                {label: Image, name: image, widget: object, fields: [
+                  {label: Image, name: image, widget: image}, 
+                  {label: Alt, name: alt, widget: string}
+                ]},
+                {label: Name, name: name, widget: string},
+                {label: Title, name: title, widget: string},
+                {label: Text, name: text, widget: text},
+              ]},
+              {label: Bio2, name: bio2, widget: object, fields: [
+                {label: Image, name: image, widget: object, fields: [
+                  {label: Image, name: image, widget: image}, 
+                  {label: Alt, name: alt, widget: string}
+                ]},
+                {label: Name, name: name, widget: string},
+                {label: Title, name: title, widget: string},
+                {label: Text, name: text, widget: text},
+              ]}
+          ]}
       - file: "src/pages/products/index.md"
         label: "Products Page"
         name: "products"
@@ -38,8 +45,39 @@ collections:
           - {label: Image, name: image, widget: image}
           - {label: Heading, name: heading, widget: string}
           - {label: Description, name: description, widget: string}
-          - {label: Intro, name: intro, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: text}, {label: Blurbs, name: blurbs, widget: list, fields: [{label: Image, name: image, widget: image}, {label: Text, name: text, widget: text}]}]}
-          - {label: Main, name: main, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: text}, {label: Image1, name: image1, widget: object, fields: [{label: Image, name: image, widget: image}, {label: Alt, name: alt, widget: string}]}, {label: Image2, name: image2, widget: object, fields: [{label: Image, name: image, widget: image}, {label: Alt, name: alt, widget: string}]}, {label: Image3, name: image3, widget: object, fields: [{label: Image, name: image, widget: image}, {label: Alt, name: alt, widget: string}]}]}
-          - {label: Testimonials, name: testimonials, widget: list, fields: [{label: Quote, name: quote, widget: string}, {label: Author, name: author, widget: string}]}
+          - {label: Intro, name: intro, widget: object, fields: [
+              {label: Heading, name: heading, widget: string}, 
+              {label: Description, name: description, widget: text}, 
+              {label: Blurbs, name: blurbs, widget: list, fields: [
+                {label: Image, name: image, widget: image}, 
+                {label: Text, name: text, widget: text}
+                ]}
+            ]}
+          - {label: Main, name: main, widget: object, fields: [
+              {label: Heading, name: heading, widget: string}, 
+              {label: Description, name: description, widget: text}, 
+              {label: Image1, name: image1, widget: object, fields: [
+                {label: Image, name: image, widget: image}, 
+                {label: Alt, name: alt, widget: string}]},
+              {label: Image2, name: image2, widget: object, fields: [
+                {label: Image, name: image, widget: image}, 
+                {label: Alt, name: alt, widget: string}]},
+              {label: Image3, name: image3, widget: object, fields: [
+                {label: Image, name: image, widget: image}, 
+                {label: Alt, name: alt, widget: string}]}
+            ]}
+          - {label: Testimonials, name: testimonials, widget: list, fields: [
+              {label: Quote, name: quote, widget: string}, 
+              {label: Author, name: author, widget: string}
+            ]}
           - {label: Full_image, name: full_image, widget: image}
-          - {label: Pricing, name: pricing, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: string}, {label: Plans, name: plans, widget: list, fields: [{label: Plan, name: plan, widget: string}, {label: Price, name: price, widget: string}, {label: Description, name: description, widget: string}, {label: Items, name: items, widget: list}]}]}
+          - {label: Pricing, name: pricing, widget: object, fields: [
+              {label: Heading, name: heading, widget: string}, 
+              {label: Description, name: description, widget: string}, 
+              {label: Plans, name: plans, widget: list, fields: [
+                {label: Plan, name: plan, widget: string}, 
+                {label: Price, name: price, widget: string}, 
+                {label: Description, name: description, widget: string}, 
+                {label: Items, name: items, widget: list}
+              ]}
+            ]}
