--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,8 +14,8 @@ collections:
         name: "about"
         fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "about-page"}
-          - {label: Title, name: title, widget: string}
-          - {label: Heading, name: heading, widget: string}
+          - {label: "Title", name: "title", widget: "string"}
+          - {label: "Heading", name: "heading", widget: "string"}
       - file: "src/pages/products/index.md"
         label: "Products Page"
         name: "products"
