--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -9,13 +9,22 @@ collections:
   - name: "pages"
     label: "Pages"
     files:
-      - file: "src/pages/about/index.md"
+      - file: "src/pages/about/index2.md"
         label: "About"
         name: "about"
         fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "about-page"}
-          - {label: "Title", name: "title", widget: "string"}
-          - {label: "Body", name: "body", widget: "markdown"}
+          - {label: Title, name: title, widget: string}
+          - {label: Heading, name: heading, widget: string}
+          - {label: Bios, name: bios, widget: list, fields: [
+              {label: Image, name: bioImage, widget: object, fields: [
+                  {label: Image, name: image, widget: image}, 
+                  {label: Alt, name: alt, widget: string}
+                ]},
+              {label: Name, name: name, widget: string},
+              {label: Title, name: title, widget: string},
+              {label: Text, name: text, widget: text},
+            ]}
       - file: "src/pages/products/index.md"
         label: "Products Page"
         name: "products"
