--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -21,6 +21,8 @@ collections:
               {label: Title, name: title, widget: string},
               {label: Text, name: text, widget: text},
             ]}
+        editor:
+          preview: false
       - file: "src/pages/products/index.md"
         label: "Products Page"
         name: "products"
