--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -9,13 +9,13 @@ collections:
   - name: "pages"
     label: "Pages"
     files:
-      - file: "src/pages/about/index2.md"
+      - file: "src/pages/about/index.md"
         label: "About"
         name: "about"
         fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "about-page"}
           - {label: "Title", name: "title", widget: "string"}
-          - {label: "Heading", name: "heading", widget: "string"}
+          - {label: "Heading", name: "body", widget: "markdown"}
       - file: "src/pages/products/index.md"
         label: "Products Page"
         name: "products"
