--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,6 +12,8 @@ collections:
       - file: "src/pages/about/index.md"
         label: "About"
         name: "about"
+        editor:
+          preview: false
         fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "about-page"}
           - {label: "Title", name: "title", widget: "string"}
