start configuring about page

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,6 +17,17 @@ collections:
         fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "about-page"}
           - {label: "Title", name: "title", widget: "string"}
+          - {label: "Heading", name: "heading", widget: "string"}
+          - {label: "Bios", name: "bios", widget: "list", fields: [
+            {label: "Name", name: "name", widget: "string"},
+            {label: "Title", name: "title", widget: "string"},
+            {label: "Text", name: "text", widget: "text"},
+            {label: "Links", name: "links", widget: "list", fields: [
+              {label: "Image", name: "image", widget: "image"},
+              {label: "Alt", name: "alt", widget: "string"},
+              {label: "Link", name: "link", widget: "string"}
+            ]}
+          ]}
       - file: "src/pages/products/index.md"
         label: "Products Page"
         name: "products"
