--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -11,7 +11,7 @@ collections:
     editor:
       preview: false
     files:
-      - file: "src/pages/about/index.md"
+      - file: "src/pages/about/index2.md"
         label: "About"
         name: "about"
         fields:
@@ -23,8 +23,7 @@ collections:
             {label: "Title", name: "title", widget: "string"},
             {label: "Text", name: "text", widget: "text"},
             {label: "Links", name: "links", widget: "list", fields: [
-              {label: "Image", name: "image", widget: "image"},
-              {label: "Alt", name: "alt", widget: "string"},
+              {label: "Type", name: "type", widget: "select", options: ["Twitter", "Facebook", "LinkedIn", "Email"]},
               {label: "Link", name: "link", widget: "string"}
             ]}
           ]}
