--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -35,7 +35,7 @@ collections:
             {label: "Image", name: "image", widget: "image"}
           ]}
           - {label: "Contact Heading", name: "contactHeading", widget: "string"}
-      - file: "src/pages/home/index.md"
+      - file: "src/pages/index.md"
         label: "How It Works"
         name: "home"
         fields:
